--- a/content/assets/css/custom.css
+++ b/content/assets/css/custom.css
@@ -26,6 +26,7 @@ aside div p  {
     padding: 10px;
     color: #333;
     background-color: #f3e501;
+    line-height: 1.4;
 }
 aside div p a {
     color: #333;
