--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,25 +12,27 @@ aside div h1 {
     color: #fff;
     margin: 15px 0 10px;
 }
+
 aside div h1 a {
     padding: 10px;
     color: #fff;
     background-color: #d9411e;
 }
+
 aside div h1 a:hover {
     padding: 10px;
     color: #fff;
     background-color: #d9411e;
 }
 
-
 aside div p  {
     font-size: 1.2em;
-    margin: 0 20px;
+    margin: 0 auto;
     padding: 10px;
     color: #000;
     background-color: #f3e501;
     line-height: 1.4;
+    width: 55%;
 }
 aside div p a {
     color: #000;
