--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,38 +1,69 @@
 aside {
-    background-color: #000;
+    width: 20vw;
+}
+
+a {
+    color: #000;
+    text-decoration: underline;
+}
+
+h1, h2, h3 {
+    font-weight: 400;
+}
+
+h2 a {
+    color: #9452a5;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #9452a5;
+    text-decoration: underline;
+}
+
+aside {
+    background-color: #9452a5;
+    background-image: url("/assets/images/bkg/purple.png");
+    background-repeat: repeat;
+}
+
+aside div {
+    padding: 36px 18px;
 }
 
 aside div img {
-    border-radius: 50%;
+    border-radius: 75%;
     max-width: 200px;
-    border: 5px solid #f3e501;
+    border: 2px solid #000;
 }
 
 aside div h1 {
     color: #fff;
     margin: 15px 0 10px;
+    transform: rotate(-2deg);
 }
-
 aside div h1 a {
     padding: 10px;
     color: #fff;
-    background-color: #d9411e;
+    text-decoration: none;
+    background-color: #9452a5;
+    border: 2px solid;
 }
-
 aside div h1 a:hover {
     padding: 10px;
     color: #fff;
-    background-color: #d9411e;
+    background-color: #9452a5;
+    text-decoration: none;
 }
 
-aside div p  {
-    font-size: 1.2em;
-    margin: 0 auto;
-    padding: 10px;
+aside div p {
     color: #000;
-    background-color: #f3e501;
+    background-color: #fff;
     line-height: 1.4;
-    width: 55%;
+    margin: 0 auto;
+    padding: 4%;
+    width: 52%;
+    border: 2px solid #000;
 }
 aside div p a {
     color: #000;
@@ -40,7 +71,14 @@ aside div p a {
 }
 
 aside div p a:hover {
-    color: #000;
+    color: #9452a5;
     text-decoration: underline;
 }
+
+aside div nav a,
+aside div nav a:hover {
+    color: #fff;
+    text-decoration: underline;
+}
+
 
