Generate Pelican site

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -81,4 +81,9 @@ aside div nav a:hover {
     text-decoration: underline;
 }
 
+.tag-cloud a,
+.tag-cloud a:hover {
+    color: #fff;
+    background-color: #9452a5;
+}
 
